# Indus_Lease

./: .gitignore  .replit  README.md  conflict_block.txt  package-lock.json  package.json  pyproject.toml  python_requirements.txt  replit.md  start_dev.py  vite.config.ts
attached_assets/: Pasted-INFO-10-84-6-15-0-POST-api-extractions-start-site-1-HTT_1775793367682.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  model-selector.tsx  motion-primitives.tsx  pdf-viewer.tsx
client/src/hooks/: use-progress.ts
client/src/pages/: dashboard.tsx  extractions.tsx  extractions1.tsx  not-found.tsx  settings.tsx  site-detail.tsx  site-explorer.tsx  tag-management.tsx
scripts/: post-merge.sh
server/: cost-tracker.ts  document-parser.ts  extractor.ts  index.ts  progress.ts  routes.ts  seed.ts  storage.ts  vectorizer.ts
server_py/: config.py  cost_tracker.py  db.py  document_parser.py  extractor.py  main.py  progress.py  seed.py  storage.py  vision_extractor.py
shared/: schema.ts
uploads/: 1775790444983-1-30463_MAH-SD-246648_1464062_21477652.msg  1775790445058-10-29208_MAH-NB-244954_1444375_20977100.msg  1775790445065-13-28643_MAH-EXP-301435_1917938_53302075.msg  1775790445071-14-28630_MAH-EXP-301304_1916777_53279586.msg
