[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.85.0",
    "extract-msg>=0.55.0",
    "fastapi>=0.135.1",
    "mail-parser>=4.1.4",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pillow>=11.0.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
